# resd.dpdk_tcp

./: .gitignore  .gitmodules  .ri  CLAUDE.md  Cargo.toml  README.md
crates/dpdk-net/: Cargo.toml  build.rs  cbindgen-test.toml  cbindgen.toml
crates/dpdk-net-core/: Cargo.toml
crates/dpdk-net-core/examples/: counter-names-dump.rs
crates/dpdk-net-core/fuzz/: .gitignore  Cargo.toml
crates/dpdk-net-core/src/: arp.rs  bench_alloc_audit.rs  clock.rs  counters.rs  dpdk_consts.rs  ena_xstats.rs  engine.rs  error.rs  fault_injector.rs  flow_table.rs  iovec.rs  iss.rs  l2.rs  l3_ip.rs  lib.rs  llq_verify.rs  mempool.rs  rtt_histogram.rs  tcp_conn.rs  tcp_events.rs  tcp_input.rs  tcp_options.rs  tcp_output.rs  tcp_rack.rs  tcp_reassembly.rs  tcp_retrans.rs  tcp_rtt.rs  tcp_send_ack_log.rs  tcp_seq.rs  tcp_state.rs  tcp_timer_wheel.rs  tcp_tlp.rs  test_fixtures.rs  test_server.rs  test_tx_intercept.rs  wc_verify.rs
crates/dpdk-net-core/tests/: a5_harness_smoke.rs  ad_a7_dup_syn_retrans_synack.rs  ad_a7_rst_relisten.rs  ad_a7_slot_cleanup.rs  ad_a7_syn_retrans.rs  ahw_smoke.rs  ahw_smoke_ena_hw.rs  bench_alloc_hotpath.rs  cabi_field_wired.rs  checksum_streaming_equiv.rs  connect_close_cycle.rs  counter-coverage.rs  deferred-counters.txt  eal_init_error_paths.rs  engine_drop_safe.rs  engine_new_validation.rs  engine_no_eal_harness.rs  engine_restart_cycle_stable.rs  engine_smoke.rs  fault_injector_chain_uaf_smoke.rs  fault_injector_smoke.rs  feature-gated-counters.txt  i8_fin_piggyback_chain.rs  i8_multi_seg_fin_piggyback.rs  inject_rx_chain_smoke.rs  inject_rx_frame_smoke.rs  knob-coverage-informational.txt  knob-coverage.rs  l2_l3_tap.rs  long_soak_stability.rs  mbuf_handle_try_clone_balance.rs  multi_readable_per_poll_scratch_survives.rs  multi_seg_chain_pool_drift.rs  multiseg_retrans_tap.rs  no_alloc_hotpath_audit.rs  obs_none_gate_smoke.rs  obs_smoke.rs  per-conn-histogram-coverage.rs  pressure_conn_churn.rs  pressure_counter_parity.rs  (+44 more)
crates/dpdk-net/src/: api.rs  lib.rs  test_ffi.rs  test_only.rs
crates/dpdk-net/tests/: api_shutdown.rs  panic_firewall.rs  test_header_excluded.rs
crates/resd-net/: Cargo.toml  build.rs  cbindgen.toml
crates/resd-net-sys/: Cargo.toml  build.rs  shim.c  wrapper.h
crates/resd-net-sys/src/: lib.rs
crates/resd-net/src/: api.rs  lib.rs
examples/cpp-consumer/: CMakeLists.txt  main.cpp
tools/bench-ab-runner/: Cargo.toml
tools/bench-ab-runner/src/: main.rs  workload.rs
tools/bench-ab-runner/tests/: smoke.rs
tools/bench-build-helpers/: Cargo.toml
tools/bench-build-helpers/src/: lib.rs
tools/bench-e2e/: Cargo.toml
tools/bench-e2e/peer/: .gitignore  Makefile  burst-echo-server.c  echo-server.c  test-robustness.sh
tools/bench-e2e/src/: lib.rs  main.rs  sum_identity.rs
tools/bench-e2e/tests/: attribution_unit.rs
tools/bench-fstack-ffi/: Cargo.toml
tools/bench-fstack-ffi/src/: lib.rs
tools/bench-micro/: Cargo.toml
tools/bench-micro/benches/: build_segment.rs  counters.rs  deliver_readable.rs  flow_lookup.rs  flow_scale.rs  loss_detection.rs  parse_options.rs  poll.rs  rx_prelude.rs  send.rs  tcp_input.rs  throughput.rs  timer.rs  timer_advanced.rs  tsc_read.rs
tools/bench-obs-overhead/: Cargo.toml
tools/bench-obs-overhead/src/: decision.rs  lib.rs  main.rs  matrix.rs  report.rs
tools/bench-obs-overhead/tests/: obs_decision.rs
tools/bench-offload-ab/: Cargo.toml
tools/bench-offload-ab/src/: decision.rs  lib.rs  main.rs  matrix.rs  report.rs
tools/bench-offload-ab/tests/: decision_rule.rs
tools/bench-report/: Cargo.toml
tools/bench-report/src/: filter.rs  html_writer.rs  ingest.rs  json_writer.rs  lib.rs  main.rs  md_writer.rs
tools/bench-report/tests/: round_trip.rs
tools/bench-rtt/: Cargo.toml  build.rs
tools/bench-rtt/src/: attribution.rs  attribution_csv.rs  fstack.rs  fstack_ffi.rs  hw_task_18.rs  lib.rs  main.rs  stack.rs  workload.rs
tools/bench-rtt/tests/: attribution_csv.rs  attribution_hw_path.rs  attribution_unit.rs  fstack_payload_sweep_one_ff_run.rs  payload_sweep.rs  stack_arg.rs
tools/bench-rx-burst/: Cargo.toml  build.rs
tools/bench-rx-burst/src/: dpdk.rs  fstack.rs  lib.rs  linux.rs  main.rs  segment.rs  stack.rs
tools/bench-rx-burst/tests/: cli.rs  fstack_single_ff_run.rs
tools/bench-rx-zero-copy/: Cargo.toml
tools/bench-rx-zero-copy/benches/: delivery_cycle.rs
tools/bench-rx-zero-copy/tests/: zero_alloc.rs
tools/bench-stress/: Cargo.toml
tools/bench-stress/src/: counters_snapshot.rs  lib.rs  main.rs  netem.rs  scenarios.rs
tools/bench-stress/tests/: external_netem_skips_apply.rs  scenario_parse.rs
tools/bench-tx-burst/: Cargo.toml  build.rs
tools/bench-tx-burst/src/: burst.rs  dpdk.rs  fstack.rs  lib.rs  linux.rs  main.rs
tools/bench-tx-burst/tests/: burst_grid.rs
tools/bench-tx-maxtp/: Cargo.toml  build.rs
tools/bench-tx-maxtp/src/: dpdk.rs  fstack.rs  lib.rs  linux.rs  main.rs  maxtp.rs  peer_introspect.rs
tools/bench-tx-maxtp/tests/: maxtp_grid.rs  per_conn_samples.rs
tools/bench-vs-linux/: Cargo.toml
tools/bench-vs-linux/peer/: .gitignore  Makefile  linux-tcp-sink.c
tools/bench-vs-linux/src/: afpacket.rs  fstack.rs  lib.rs  linux_kernel.rs  main.rs  mode_rtt.rs  mode_wire_diff.rs  normalize.rs
tools/bench-vs-linux/tests/: differing_counts.rs  mode_rtt_unit.rs  normalize_roundtrip.rs
tools/bench-vs-mtcp/: Cargo.toml  build.rs
tools/bench-vs-mtcp/peer/: .gitignore  Makefile  Makefile.mtcp  bench-peer-fstack.c  bench-peer.c  mtcp-driver.c
tools/bench-vs-mtcp/src/: burst.rs  dpdk_burst.rs  dpdk_maxtp.rs  fstack_burst.rs  fstack_ffi.rs  fstack_maxtp.rs  lib.rs  linux_maxtp.rs  main.rs  maxtp.rs  mtcp.rs  peer_introspect.rs
tools/bench-vs-mtcp/tests/: burst_grid.rs  maxtp_grid.rs
tools/layer-h-correctness/: Cargo.toml
tools/layer-h-correctness/src/: assertions.rs  counters_snapshot.rs  lib.rs  main.rs  netem.rs  observation.rs  report.rs  scenarios.rs  workload.rs
tools/packetdrill-shim-runner/: Cargo.toml  build.rs
tools/scapy-fuzz-runner/: Cargo.toml
tools/tcpreq-runner/: Cargo.toml  SKIPPED.md
tools/tcpreq-runner/src/: lib.rs
(+374 files in other folders)
