[package]
name = "dpdk-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dpdk_net"
# staticlib for static linking into C++; cdylib for dynamic.
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# A6.7 (T19): gates the test-only `dpdk_net_panic_for_test()` FFI entry
# in src/test_only.rs. Used exclusively by tests/panic_firewall.rs to
# verify panic = "abort" at the C ABI boundary; never enabled in
# production builds and never emitted into dpdk_net.h via cbindgen.
test-panic-entry = []
test-inject = ["dpdk-net-core/test-inject"]
# A9 fault-injector pass-through: re-exports the dpdk-net-core feature gate.
# Default OFF; cbindgen runs without it, so nothing leaks into dpdk_net.h.
fault-injector = ["dpdk-net-core/fault-injector"]
# A10 D4 pass-through: re-exports dpdk-net-core/obs-none. Consumed by the
# tools/bench-obs-overhead A/B runner to compile away the four always-on
# observability emission sites (G1-G4) for zero-observability baseline
# measurements. Additive; default builds are unchanged.
obs-none = ["dpdk-net-core/obs-none"]
# A7: enables the test-only FFI surface (src/test_ffi.rs) and pass-through
# to dpdk-net-core's test-server feature.
test-server = ["dpdk-net-core/test-server"]

[dependencies]
dpdk-net-core = { path = "../dpdk-net-core" }
dpdk-net-sys = { path = "../dpdk-net-sys" }
libc.workspace = true

[dev-dependencies]
libc.workspace = true

[build-dependencies]
cbindgen = "0.26"
