[package]
name = "bench-e2e"
version.workspace = true
edition.workspace = true
publish = false
# Disable auto-discovery so the orphan src/main.rs (kept on disk until
# Task 4.7 fully removes it) is NOT picked up by Cargo as an implicit
# binary. The crate is now lib-only with a stub lib.rs.
autobins = false

# Plan B Task 6: end-to-end request/response RTT micro-benchmark with
# attribution buckets + A-HW Task 18 offload-counter assertions.
#
# Single-binary workload: one EAL init per process, one TCP connection
# to a C echo-server peer, a 128 B request / 128 B response inner loop,
# raw-sample capture + CSV emit via `bench-common::csv_row`. See the
# spec (docs/superpowers/specs/2026-04-21-stage1-phase-a10-benchmark-
# harness-design.md §6) for the attribution + sum-identity contract and
# parent spec §11.3 for the attribution-bucket definitions.

[lib]
name = "bench_e2e"
path = "src/lib.rs"

# bench-e2e is now peer-server-only (post-2026-05-09 bench-suite
# overhaul Phase 4). The C echo-server lives at `peer/` and is built
# via `make -C tools/bench-e2e/peer`. The Rust binary entry was moved
# to `bench-rtt` and the `[[bin]]` declaration was dropped along with
# the workload/attribution modules. Phase 4 Task 4.7 will retire this
# crate entry entirely.

[dependencies]
