[package]
name = "bench-micro"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-common = { path = "../bench-common" }
dpdk-net-core = { path = "../../crates/dpdk-net-core", features = ["bench-internals"] }
dpdk-net-sys = { path = "../../crates/dpdk-net-sys" }
dpdk-net = { path = "../../crates/dpdk-net" }
walkdir = "2"
anyhow = "1"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1.7", features = ["v4"] }
hostname = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "poll"
harness = false

[[bench]]
name = "tsc_read"
harness = false

[[bench]]
name = "flow_lookup"
harness = false

[[bench]]
name = "tcp_input"
harness = false

[[bench]]
name = "send"
harness = false

[[bench]]
name = "timer"
harness = false

[[bench]]
name = "counters"
harness = false

[[bin]]
name = "summarize"
path = "src/bin/summarize.rs"
