[package]
name = "bench-offload-ab"
version.workspace = true
edition.workspace = true
publish = false

# A10 Plan B Task 10: feature-matrix A/B driver over `hw-*` cargo flags.
#
# The driver rebuilds `bench-rtt` once per config (eight configs from
# spec §9), invokes the runner as a sub-process with the matching
# --features + --feature-set labels, captures the runner's CSV stdout,
# appends every row into a per-run accumulated CSV, and then applies the
# §9 decision rule + sanity invariant to produce
# `docs/superpowers/reports/offload-ab.md`.
#
# Phase 4 of the 2026-05-09 bench-suite overhaul retired bench-ab-runner;
# bench-rtt's `--stack dpdk_net` arm subsumes the measurement loop.
#
# The library surface (`lib.rs` → `matrix`, `decision`, `report`) is kept
# deliberately generic so T11 (`bench-obs-overhead`) can reuse the
# rebuild-loop / CSV-accumulate / decision-rule / report-write pieces
# without copy-paste; only the feature matrix swaps.
#
# See docs/superpowers/specs/2026-04-21-stage1-phase-a10-benchmark-
# harness-design.md §9.

[lib]
name = "bench_offload_ab"
path = "src/lib.rs"

[[bin]]
name = "bench-offload-ab"
path = "src/main.rs"

[dependencies]
bench-common = { path = "../bench-common" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
csv = "1.3"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
# wait-timeout is a tiny zero-dep crate (<200 LOC) that gives us a
# portable `Child::wait_timeout(Duration)`. Without it, `Child::wait()`
# blocks indefinitely if bench-rtt hangs (DPDK stall, missing NIC,
# runaway workload) and the sweep driver becomes unkillable short of
# operator SIGTERM. See I3 in the T10 code-quality review.
wait-timeout = "0.2"
