[package]
name = "bench-rtt"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# bench-rtt — cross-stack request/response RTT distribution.
#
# Phase 4 of the 2026-05-09 bench-suite overhaul (closes C-A5, C-B5,
# C-C1, C-D3). Replaces bench-e2e (binary), bench-stress (matrix
# runner), and bench-vs-linux mode A by parameterising the stack,
# payload size, connection count, and (in nightly) netem-spec axes.

[features]
default = []
fstack = ["dep:libc"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = { workspace = true, optional = true }
bench-common = { path = "../bench-common" }
dpdk-net-core = { path = "../../crates/dpdk-net-core" }
dpdk-net-sys = { path = "../../crates/dpdk-net-sys" }
dpdk-net = { path = "../../crates/dpdk-net" }
csv = "1.3"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
