[package]
name = "bench-rtt"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# bench-rtt — cross-stack request/response RTT distribution.
#
# Phase 4 of the 2026-05-09 bench-suite overhaul (closes C-A5, C-B5,
# C-C1, C-D3). Replaces bench-e2e (binary), bench-stress (matrix
# runner), and bench-vs-linux mode A by parameterising the stack,
# payload size, connection count, and (in nightly) netem-spec axes.

[features]
default = []
# Enables the F-Stack RTT inner loop. Requires libfstack.a + DPDK 23.11
# at /opt/f-stack/lib (image-builder component
# 04b-install-f-stack.yaml). Default builds skip the F-Stack arm so
# the workspace compiles on dev hosts without F-Stack.
#
# Phase 5 Task 5.4 of the 2026-05-09 bench-suite overhaul lifted the
# FFI bindings into the shared `bench-fstack-ffi` crate. Each
# downstream binary's own build.rs still owns the libfstack.a + DPDK
# whole-archive link recipe — the argument ORDER (push-state,
# --no-as-needed, ...) cannot be expressed via Cargo's link-lib emit,
# so we keep it in the downstream binary's build.rs.
fstack = ["dep:libc", "bench-fstack-ffi/fstack"]

[lib]
name = "bench_rtt"
path = "src/lib.rs"

[[bin]]
name = "bench-rtt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = { workspace = true, optional = true }
bench-common = { path = "../bench-common" }
bench-fstack-ffi = { path = "../bench-fstack-ffi" }
dpdk-net-core = { path = "../../crates/dpdk-net-core" }
dpdk-net-sys = { path = "../../crates/dpdk-net-sys" }
dpdk-net = { path = "../../crates/dpdk-net" }
csv = "1.3"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
