# A7 / Pattern P1 fix: `dpdk-net-core` MUST be an OPTIONAL dependency, with
# its `bench-alloc-audit` feature activated transitively by this crate's
# own non-default `bench-alloc-audit` feature. Otherwise Cargo's resolver
# v2 unifies `dpdk-net-core/bench-alloc-audit` ACROSS THE WORKSPACE —
# production binaries linking `dpdk-net-core` (e.g. `bench-e2e`) silently
# get the CountingAllocator / alloc-audit probe surfaces compiled in. The
# workspace-feature unification gate (`scripts/check-workspace-features.sh`)
# fails CI in that state.
#
# Same pattern applied at commits 9f0ccd0 (tcpreq-runner) and 8147404
# (layer-h-correctness). Stand-alone test/bench:
#   cargo test  -p bench-rx-zero-copy --features bench-alloc-audit
#   cargo bench -p bench-rx-zero-copy --features bench-alloc-audit
#
# `tests/zero_alloc.rs` already self-gates via `#![cfg(feature = "bench-alloc-audit")]`,
# so a build/test without the feature compiles to a no-op test binary.
# `benches/delivery_cycle.rs` uses `dpdk_net_core::iovec::DpdkNetIovec` — gated
# via `required-features` on the [[bench]] stanza below.
[package]
name = "bench-rx-zero-copy"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
dpdk-net-core = { path = "../../crates/dpdk-net-core", optional = true }
dpdk-net-sys = { path = "../../crates/dpdk-net-sys" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
# Activates dpdk-net-core (optional dep) AND its `bench-alloc-audit`
# feature transitively. tests/zero_alloc.rs's `#![cfg(...)]` gate keys
# off this feature name to compile its body.
bench-alloc-audit = ["dep:dpdk-net-core", "dpdk-net-core/bench-alloc-audit"]

[[bench]]
name = "delivery_cycle"
harness = false
# Bench body uses `dpdk_net_core::iovec::DpdkNetIovec`; only buildable
# with the feature on (which pulls dpdk-net-core into scope).
required-features = ["bench-alloc-audit"]
